Revert "fix truncate string issue when resizing window"
This reverts commit 5b945ff11db3e75371cad8ff81916d055005ac3d.

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -126,7 +126,7 @@ form.well.tag-form {
 
 .item-title {
   margin: 18px 0;
-  width: 100%;
+  width: 370px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -137,7 +137,7 @@ form.well.tag-form {
 .item-desc {
   height: 30px;
   span.item-shop{
-    width: 45%;
+    width: 175px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
